[MediaRecorder/WebM] ASSERT(pts >= m_lastMuxedSampleTime); https://bugs.webkit.org/show_bug.cgi?id=281396 rdar://137830389

Reviewed by Youenn Fablet and Jer Noble.

We were using the start time of the last received audio sample.
Audio is muxed as quickly as possible and will only ever be delayed if
we know that a video frame is incoming (as we don't want to enqueue audio until a video frame,
which may never come is finally available).
On an heavily loaded system, audio could have been received and muxed before
the related video frame got received. To ensure the best A/V sync we will
prefer the clock time at which the video frame got received but handle the
case where audio had already been muxed with a later time.

Manually tested, this is highly timing dependent and I could only reproduce while running in a
debugging session and turning on all the logging.

* Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterWebM.h:
* Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterWebM.mm:
(WebCore::MediaRecorderPrivateWriterWebM::nextVideoFrameTime const):
(WebCore::MediaRecorderPrivateWriterWebM::appendAudioSampleBuffer):
(WebCore::MediaRecorderPrivateWriterWebM::resume):

Canonical link: https://commits.webkit.org/285147@main